Added some more files

--- a/main/instructor-dashboard.html
+++ b/main/instructor-dashboard.html
@@ -502,7 +502,174 @@
 
 
         </div>
+        <div class="page-separator">
+            <div class="page-separator__text">Courses Offered</div>
+        </div>
 
+
+
+
+        <div class="row">
+           <a href="instructor-courses.html">
+             <div class="col-sm-4">
+                <div class="card js-overlay card-sm overlay--primary-dodger-blue stack stack--1" data-toggle="popover" data-trigger="click"data-domfactory-upgraded="overlay">
+                  <div class="card-body d-flex align-items-center">
+                      <a href="course.html" class="avatar avatar-4by3 mr-12pt">
+                          <img src="assets\images\paths\cryptography.jpg" alt="Cryptography" class="avatar-img rounded">
+                      </a>
+                      <div class="flex">
+                          <a class="card-title mb-4pt" href="course.html">Cryptography</a>
+                          <div class="d-flex align-items-center">
+                              <div class="rating mr-8pt">
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                              </div>
+                              <small class="text-muted">5/5</small>
+                          </div>
+                      </div>
+                  </div>
+               </div>
+             </div>
+           </a>
+           <a href="instructor-courses.html">
+             <div class="col-sm-4">
+                <div class="card js-overlay card-sm overlay--primary-dodger-blue stack stack--1" data-toggle="popover" data-trigger="click"data-domfactory-upgraded="overlay">
+                  <div class="card-body d-flex align-items-center">
+                      <a href="course.html" class="avatar avatar-4by3 mr-12pt">
+                          <img src="assets\images\paths\networks.jpg"  alt="Network and Security" class="avatar-img rounded">
+                      </a>
+                      <div class="flex">
+                          <a class="card-title mb-4pt" href="course.html">Network and Security</a>
+                          <div class="d-flex align-items-center">
+                              <div class="rating mr-8pt">
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                              </div>
+                              <small class="text-muted">5/5</small>
+                          </div>
+                      </div>
+                  </div>
+               </div>
+             </div>
+           </a>
+           <a href="instructor-courses.html">
+             <div class="col-sm-4">
+                <div class="card js-overlay card-sm overlay--primary-dodger-blue stack stack--1" data-toggle="popover" data-trigger="click"data-domfactory-upgraded="overlay">
+                  <div class="card-body d-flex align-items-center">
+                      <a href="course.html" class="avatar avatar-4by3 mr-12pt">
+                          <img src="assets\images\paths\machine.jpg" alt="Theory of Computation" class="avatar-img rounded">
+                      </a>
+                      <div class="flex">
+                          <a class="card-title mb-4pt" href="course.html">Theory of Computation</a>
+                          <div class="d-flex align-items-center">
+                              <div class="rating mr-8pt">
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+
+                                  <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                  <span class="rating__item"><span class="material-icons">star_border</span></span>
+
+                              </div>
+                              <small class="text-muted">4.5/5</small>
+                          </div>
+                      </div>
+                  </div>
+               </div>
+             </div>
+           </a>
+        </div>
+        <div class="row">
+          <a href="instructor-courses.html">
+            <div class="col-sm-4">
+               <div class="card js-overlay card-sm overlay--primary-dodger-blue stack stack--1" data-toggle="popover" data-trigger="click"data-domfactory-upgraded="overlay">
+                 <div class="card-body d-flex align-items-center">
+                     <a href="course.html" class="avatar avatar-4by3 mr-12pt">
+                         <img src="assets\images\paths\software.jpg"  alt="Software Engineering" class="avatar-img rounded">
+                     </a>
+                     <div class="flex">
+                         <a class="card-title mb-4pt" href="course.html">Software Engineering</a>
+                         <div class="d-flex align-items-center">
+                             <div class="rating mr-8pt">
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                 <span class="rating__item"><span class="material-icons">star_border</span></span>
+
+                             </div>
+                             <small class="text-muted">4.3/5</small>
+                         </div>
+                     </div>
+                 </div>
+              </div>
+            </div>
+          </a>
+          <a href="instructor-courses.html">
+            <div class="col-sm-4">
+               <div class="card js-overlay card-sm overlay--primary-dodger-blue stack stack--1" data-toggle="popover" data-trigger="click"data-domfactory-upgraded="overlay">
+                 <div class="card-body d-flex align-items-center">
+                     <a href="course.html" class="avatar avatar-4by3 mr-12pt">
+                         <img src="assets\images\paths\competitive-programming.jpg" alt="Data Structure and Algorithms" class="avatar-img rounded">
+                     </a>
+                     <div class="flex">
+                         <a class="card-title mb-4pt" href="course.html">Data Structure and Algorithms</a>
+                         <div class="d-flex align-items-center">
+                             <div class="rating mr-8pt">
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+
+                                 <span class="rating__item"><span class="material-icons">star</span></span>
+
+                                 <span class="rating__item"><span class="material-icons">star_border</span></span>
+
+                             </div>
+                             <small class="text-muted">4/5</small>
+                         </div>
+                     </div>
+                 </div>
+              </div>
+            </div>
+          </a>
+
+
+        </div>
         <div class="page-separator">
           <div class="page-separator__text">Performance Analysis</div>
         </div>
@@ -585,8 +752,6 @@
                                     </div>
                                 </div>
                             </div>
-
-
 
         <div class="page-separator">
           <div class="page-separator__text">Earning</div>
