--- a/main/instructor-time-table.html
+++ b/main/instructor-time-table.html
@@ -264,11 +264,11 @@
                     </div>
 
 
-                    <div class="row" role="tablist">
+                    <!-- <div class="row" role="tablist">
                         <div class="col-auto">
                             <a href="instructor-edit-course.html" class="btn btn-outline-secondary">Change Schedule</a>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -276,7 +276,7 @@
             <div class="container page__container page-section">
 
               <div class="page-separator">
-                  <div class="page-separator__text"> WEEKLY SCHEDULE</div>
+                  <div class="page-separator__text">Shift Distribution</div>
               </div>
               <div class="card mb-lg-32pt">
 
@@ -502,7 +502,7 @@
                                           </td>
                                           <td>
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 2nd year</strong></small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 3rd year</strong></small>
                                                   <small class="text-black-50">3:00 pm-4:00 pm</small>
                                               </a>
                                           </td>
