--- a/main/instructor-check-attendance.html
+++ b/main/instructor-check-attendance.html
@@ -9,7 +9,7 @@
 
     <!-- Prevent the demo from appearing in search engines -->
     <meta name="robots" content="noindex">
-
+    <link href="assets\css\elements.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CRoboto:400,500%7CExo+2:600&display=swap"
         rel="stylesheet">
 
@@ -38,6 +38,8 @@
 
     <!-- Bootstrap Css -->
     <link href="assets\css\bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css">
+
+
 
 
 
@@ -249,20 +251,35 @@
                                     My Time-Off
 
                                 </li>
-
                             </ol>
+                        </div>
+                    </div>
+                    <div id="abc">
+                    <!-- Popup Div Starts Here -->
+                    <div id="popupContact">
+                    <!-- Contact Us Form -->
+                    <form class="form" action="#" id="form" method="post" name="form">
+                    <i id="close"class="fas fa-times-circle fa-2x"style="color:#ed0b4c;"onclick ="div_hide()"></i>
 
+                    <h2 class="form">Contact Us</h2>
+                    <hr class="form">
+                    <input type="text" id="date" data-format="DD-MM-YYYY" data-template="D MMM YYYY" name="date" value="09-01-2013">
+                    <input class="form" id="name" name="name" placeholder="Name" type="text">
+                    <input class="form" id="email" name="email" placeholder="Email" type="text">
+                    <textarea class="form" id="msg" name="message" placeholder="Message"></textarea>
+
+                    <button class="btn btn-accent"type="submit">Submit</button>
+                    </form>
+                    </div>
+                    <!-- Popup Div Ends Here -->
+                    </div>
+                    <!-- Display Popup Button -->
+                    <div class="row" role="tablist">
+                        <div class="col-auto">
+                            <button id="popup"class="btn btn-outline-secondary"onclick="div_show()">Leave</button>
                         </div>
                     </div>
 
-
-                                        <div class="row" role="tablist">
-                                            <div class="col-auto">
-                                              <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
-
-
-                                            </div>
-                                        </div>
                 </div>
             </div>
 
@@ -439,7 +456,7 @@
 
 
              </div>
-                <!--  END drawer-layout -->
+               <!--  END drawer-layout -->
                <!-- jQuery -->
 
                 <script src="assets\vendor\jquery.min.js"></script>
@@ -462,9 +479,24 @@
 
                 <!-- App JS -->
                 <script src="assets\js\app.js"></script>
-
-
+                
+                <!-- Calendar JS -->
                 <script src="assets\js\calendar.js" type="text/javascript"></script>
+
+                <!-- Pop Up Form Js -->
+                <script src="assets\js\leaveForm.js" type="text/javascript"></script>
+
+                <!-- Date Picker -->
+                <script src="assets\js\moment.js"></script>
+                <script src="assets\js\combodate.js"></script>
+
+                <script>
+
+                $(function(){
+                    $('#date').combodate();
+                });
+
+                </script>
 
 
 </body>
