--- a/main/instructor-profile.html
+++ b/main/instructor-profile.html
@@ -286,7 +286,7 @@
                         <h2 class="text-white mb-0">Michael Dam</h2>
                         <p class="lead text-white-50 d-flex align-items-center">Instructor <span class="ml-16pt d-flex align-items-center"><i class="material-icons icon-16pt mr-4pt">opacity</i> 2,300 IQ</span></p>
                     </div>
-                    <a href="" class="btn btn-outline-white">Edit Profile</a>
+                    <a href="instructor-edit-profile.html" class="btn btn-outline-white">Edit Profile</a>
                 </div>
                 <br>
 
