--- a/main/instructor-time-off.html
+++ b/main/instructor-time-off.html
@@ -270,9 +270,13 @@
 
                                 </a></li>
 
-
                             </ol>
 
+                        </div>
+                    </div>
+                    <div class="row" role="tablist">
+                        <div class="col-auto">
+                            <a href="instructor-check-attendance.html" class="btn btn-outline-secondary">View Details</a>
                         </div>
                     </div>
                 </div>
