--- a/main/instructor-notifications.html
+++ b/main/instructor-notifications.html
@@ -565,12 +565,12 @@
                             </a>
                         </li>
 
-                        <!-- <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="instructor-edit-quiz.html">
-                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">format_shapes</span>
-                                <span class="sidebar-menu-text">Edit Quiz</span>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-upload-lecture.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">post_add</span>
+                                <span class="sidebar-menu-text">Uplaod/Record Lecture</span>
                             </a>
-                        </li> -->
+                        </li>
 
                         <li class="sidebar-menu-item">
                           <a class="sidebar-menu-button" href="change-password.html">
