--- a/main/instructor-quiz-all-students.html
+++ b/main/instructor-quiz-all-students.html
@@ -312,7 +312,7 @@
                                             </th>
 
                                             <th style="width: 48px;">
-                                                <a href="javascript:void(0)" class="sort" data-sort="js-lists-values-date">Date of Submission</a>
+                                                <a href="javascript:void(0)" class="sort" data-sort="js-lists-values-date">Submission status</a>
                                             </th>
 
                                         </tr>
@@ -391,7 +391,7 @@
 
                                             <td style="text-align:center;">
                                                 <div class="d-flex flex-column">
-                                                    <small class="js-lists-values-date"><strong>19/02/2019</strong></small>
+                                                    <small class="js-lists-values-date"><strong>Submitted</strong></small>
 
                                                 </div>
                                             </td>
@@ -454,8 +454,8 @@
 
                                             <td>
                                                 <div class="d-flex flex-column">
-                                                    <small class="js-lists-values-status text-50 mb-4pt">Passed</small>
-                                                    <span class="indicator-line rounded bg-primary"></span>
+                                                    <small class="js-lists-values-status text-50 mb-4pt">-----</small>
+                                                    <span class="indicator-line rounded bg-warning"></span>
                                                 </div>
                                             </td>
 
@@ -463,14 +463,14 @@
 
                                             <td>
 
-                                                 <span  class="btn btn-dark btn-rounded">440/500</span>
+                                                 <span  class="btn btn-dark btn-rounded">-----</span>
 
                                            </td>
 
                                             <td style="text-align:center;">
                                                 <div class="d-flex flex-column">
-                                                    <small class="js-lists-values-date"><strong>18/02/2019</strong></small>
-                                                    <small class="text-danger">Overdue</small>
+                                                    <small class="js-lists-values-date"><strong>Not Submitted</strong></small>
+
                                                 </div>
                                             </td>
 
@@ -549,7 +549,7 @@
 
                                             <td style="text-align:center;">
                                                 <div class="d-flex flex-column">
-                                                    <small class="js-lists-values-date"><strong>17/02/2019</strong></small>
+                                                    <small class="js-lists-values-date"><strong>Submitted</strong></small>
 
                                                 </div>
                                             </td>
@@ -625,7 +625,7 @@
 
                                             <td style="text-align:center;">
                                                 <div class="d-flex flex-column">
-                                                    <small class="js-lists-values-date"><strong>16/02/2019</strong></small>
+                                                    <small class="js-lists-values-date"><strong>Submitted</strong></small>
 
                                                 </div>
                                             </td>
@@ -704,7 +704,7 @@
 
                                               <td style="text-align:center;">
                                                   <div class="d-flex flex-column">
-                                                      <small class="js-lists-values-date"><strong>09/01/2019</strong></small>
+                                                      <small class="js-lists-values-date"><strong>Submitted</strong></small>
 
                                                   </div>
                                               </td>
@@ -767,8 +767,8 @@
 
                                             <td>
                                                 <div class="d-flex flex-column">
-                                                    <small class="js-lists-values-status text-50 mb-4pt">Passed</small>
-                                                    <span class="indicator-line rounded bg-primary"></span>
+                                                    <small class="js-lists-values-status text-50 mb-4pt">-----</small>
+                                                    <span class="indicator-line rounded bg-warning"></span>
                                                 </div>
                                             </td>
 
@@ -776,13 +776,13 @@
 
                                             <td>
 
-                                                 <span  class="btn btn-dark btn-rounded">340/500</span>
+                                                 <span  class="btn btn-dark btn-rounded">-----</span>
 
                                            </td>
 
                                             <td style="text-align:center;">
                                                 <div class="d-flex flex-column">
-                                                    <small class="js-lists-values-date"><strong>01/12/2018</strong></small>
+                                                    <small class="js-lists-values-date"><strong>Not Submitted</strong></small>
 
                                                 </div>
                                             </td>
@@ -861,7 +861,7 @@
 
                                               <td style="text-align:center;">
                                                   <div class="d-flex flex-column">
-                                                      <small class="js-lists-values-date"><strong>19/02/2019</strong></small>
+                                                      <small class="js-lists-values-date"><strong>Submitted</strong></small>
 
                                                   </div>
                                               </td>
@@ -924,8 +924,8 @@
 
                                               <td>
                                                   <div class="d-flex flex-column">
-                                                      <small class="js-lists-values-status text-50 mb-4pt">Passed</small>
-                                                      <span class="indicator-line rounded bg-primary"></span>
+                                                      <small class="js-lists-values-status text-50 mb-4pt">-----</small>
+                                                      <span class="indicator-line rounded bg-warning"></span>
                                                   </div>
                                               </td>
 
@@ -933,14 +933,14 @@
 
                                               <td>
 
-                                                   <span  class="btn btn-dark btn-rounded">440/500</span>
+                                                   <span  class="btn btn-dark btn-rounded">-----</span>
 
                                              </td>
 
                                               <td style="text-align:center;">
                                                   <div class="d-flex flex-column">
-                                                      <small class="js-lists-values-date"><strong>18/02/2019</strong></small>
-                                                      <small class="text-danger">Overdue</small>
+                                                      <small class="js-lists-values-date"><strong>Not Submitted</strong></small>
+
                                                   </div>
                                               </td>
 
@@ -1019,7 +1019,7 @@
 
                                               <td style="text-align:center;">
                                                   <div class="d-flex flex-column">
-                                                      <small class="js-lists-values-date"><strong>17/02/2019</strong></small>
+                                                      <small class="js-lists-values-date"><strong>Submitted</strong></small>
 
                                                   </div>
                                               </td>
@@ -1095,7 +1095,7 @@
 
                                               <td style="text-align:center;">
                                                   <div class="d-flex flex-column">
-                                                      <small class="js-lists-values-date"><strong>16/02/2019</strong></small>
+                                                      <small class="js-lists-values-date"><strong>Submitted</strong></small>
 
                                                   </div>
                                               </td>
