--- a/main/quiz-student-result.html
+++ b/main/quiz-student-result.html
@@ -524,7 +524,12 @@
                                 <span class="sidebar-menu-text">Edit Course</span>
                             </a>
                         </li>
-
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-upload-lecture.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">post_add</span>
+                                <span class="sidebar-menu-text">Uplaod/Record Lecture</span>
+                            </a>
+                        </li>
 
 
                         <li class="sidebar-menu-item">
