--- a/main/instructor-check-attendance.html
+++ b/main/instructor-check-attendance.html
@@ -415,9 +415,9 @@
                         </li>
 
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="instructor-edit-quiz.html">
-                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">format_shapes</span>
-                                <span class="sidebar-menu-text">Edit Quiz</span>
+                            <a class="sidebar-menu-button" href="instructor-upload-lecture.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">post_add</span>
+                                <span class="sidebar-menu-text">Uplaod/Record Lecture</span>
                             </a>
                         </li>
 
@@ -479,7 +479,7 @@
 
                 <!-- App JS -->
                 <script src="assets\js\app.js"></script>
-                
+
                 <!-- Calendar JS -->
                 <script src="assets\js\calendar.js" type="text/javascript"></script>
 
