--- a/main/instructor-quiz-all-students.html
+++ b/main/instructor-quiz-all-students.html
@@ -1197,7 +1197,7 @@
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="instructor-time-off.html">
+                            <a class="sidebar-menu-button" href="instructor-check-attendance.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
                                 <span class="sidebar-menu-text">Time-off</span></span>
                             </a>
@@ -1227,13 +1227,12 @@
                                 <span class="sidebar-menu-text">Edit Course</span>
                             </a>
                         </li>
-
-                        <!-- <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="instructor-edit-quiz.html">
-                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">format_shapes</span>
-                                <span class="sidebar-menu-text">Edit Quiz</span>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-lecture-subjects.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">post_add</span>
+                                <span class="sidebar-menu-text">Uplaod/Record Lecture</span>
                             </a>
-                        </li> -->
+                        </li>
 
                         <li class="sidebar-menu-item">
                           <a class="sidebar-menu-button" href="change-password.html">
