--- a/main/instructor-upload-lecture.html
+++ b/main/instructor-upload-lecture.html
@@ -264,6 +264,19 @@
                             </p>
                         </div>
                     </div>
+                    <ul class="nav navbar-nav ml-sm-auto align-items-center align-items-sm-end d-none d-lg-flex">
+                        <li class="nav-item active ml-sm-16pt">
+                            <a href="" class="nav-link">Video</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a style="cursor:pointer;"class="nav-link" onclick="document.getElementById('getNotes').click()">Upload Notes</a>
+                          <input type='file' id="getNotes" style="display:none">
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Discussions</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="bg-primary pb-lg-64pt py-32pt">
@@ -287,6 +300,7 @@
                             </div>
                         </div>
                     </div>
+                      <button class="btn btn-white" >Play/Pause</button>
                       <button style="float:right;"class="btn btn-white" onclick="close()">Stop</button>
                     <div class="d-flex flex-wrap align-items-end mb-16pt">
                         <h1 class="text-white flex m-0">Introduction to Theory of Computation</h1>
@@ -405,17 +419,18 @@
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-check-attendance.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
+                                <span class="sidebar-menu-text">Time-off</span></span>
+                            </a>
+                        </li>
+                        <li class="sidebar-menu-item">
                             <a class="sidebar-menu-button" href="instructor-time-table.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
                                 <span class="sidebar-menu-text">Schedule</span></span>
                             </a>
                         </li>
-                        <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="instructor-time-off.html">
-                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
-                                <span class="sidebar-menu-text">Time-off</span></span>
-                            </a>
-                        </li>
+
                         <li class="sidebar-menu-item">
                             <a class="sidebar-menu-button" href="instructor-notifications.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
@@ -436,7 +451,7 @@
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="instructor-upload-lecture.html">
+                            <a class="sidebar-menu-button" href="instructor-lecture-subjects.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">post_add</span>
                                 <span class="sidebar-menu-text">Uplaod/Record Lecture</span>
                             </a>
